--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,3 +1,26 @@
 @use "./base.scss";
 
 // put your custom CSS here!
+
+head{
+  background: #800E16;
+}
+body {
+  /***
+    ADD YOUR CUSTOM STYLING HERE. (INSIDE THE body {...} section.)
+    IT WILL TAKE PRECEDENCE OVER THE STYLING IN THE STYLE.CSS FILE.
+ ***/
+  //  background-color: white;
+  //  .content {
+  //   font-size: 14px;
+  //  }
+  //  h1 {
+  //   color: black;
+  //  }
+  font-family: Courier, monospace;
+  background: #BA3B46;
+  color: white;
+}
+a{
+  color: #3BBAAF;
+}
