--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Pixel Font", "monospace";
 }
 
+* {
+  font-family: "Pixel Font", "monospace";
+}
+
 body {
   font-family: "Pixel Font", "monospace";
   font-size: 20px;
